crates/tui/tests/storybook/snapshots/app_tool::glob_tool_block_error.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* glob [invalid
  invalid glob pattern: missing ]


─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
