crates/tui/tests/storybook/snapshots/app_tool::glob_tool_block_no_matches.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* glob missing/**/*.rs
  0 files


─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
