crates/tui/tests/storybook/snapshots/app_tool::glob_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 607
expression: frame.text()
---
* explore ×3 (1 error)
  glob **/*.rs in crates/term
  glob missing/**/*.rs
  glob [invalid










─ ✿ working… ───────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
