crates/tui/tests/storybook/snapshots/app_tool::glob_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 464
expression: frame.text()
---
* glob ×3 (1 error)
  **/*.rs in crates/term
  missing/**/*.rs
  [invalid










─ ✿ working… ───────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
