crates/tui/tests/storybook/snapshots/app_tool::grep_tool_block.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
* grep fn render in crates/tui/src
  2 matches




─ ✿ working… ─────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ○ normal                                                     1:1 100%
