crates/tui/tests/storybook/snapshots/app_tool::grep_tool_block_error.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* grep (?P<bad in crates/tui/src
  regex parse error: unterminated group


─ ✿ working… ─────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ○ normal                                                     1:1 100%
