crates/tui/tests/storybook/snapshots/app_tool::grep_tool_block_error.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 8
  0   0   1 fg=AnsiValue(9)
  0   1   6 attrs=dim
  1   2  37 fg=AnsiValue(9)
  4   0  67 fg=AnsiValue(237)
  4  67   1 fg=AnsiValue(244)
  4  69   1 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  70 fg=AnsiValue(237)
  7   0  70 bg=AnsiValue(233)
